# tlars-python

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  build_and_install.sh  pyproject.toml  requirements.txt  setup.py  test_tlars.py
.github/workflows/: build-and-publish.yml  publish-to-conda.yml  publish-to-pypi.yml  pypi-publish.yml  test-build.yml
conda-recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
tests/: README.md
tlars/: __init__.py
