[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.12", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "tlars"
version = "0.8.0"
description = "Python port of the tlars R package for Terminating-LARS (T-LARS) algorithm"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Arnau Vilella", email = "avp@connect.ust.hk"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.3.0"]

[project.urls]
"Homepage" = "https://github.com/ArnauVilella/tlars-python"
"Bug Tracker" = "https://github.com/ArnauVilella/tlars-python/issues"